# robotics-orange

./: .clang-format  .gitignore  CMakeLists.txt  README.md  localization.launch  moving.launch  package.xml  publish_map.py
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel/include/create_fundamentals/: DiffDrive.h  DiffDriveRequest.h  DiffDriveResponse.h  Leds.h  LedsRequest.h  LedsResponse.h  PlaySong.h  PlaySongRequest.h  PlaySongResponse.h  ResetEncoders.h  ResetEncodersRequest.h  ResetEncodersResponse.h  SensorPacket.h  StoreSong.h  StoreSongRequest.h  StoreSongResponse.h
catkin_ws/devel/lib/orange_fundamentals/: example_laser  example_moving
catkin_ws/devel/lib/pkgconfig/: create_fundamentals.pc  orange_fundamentals.pc  robotics_fundamentals.pc
catkin_ws/devel/lib/python2.7/dist-packages/create_fundamentals/msg/: _SensorPacket.py
catkin_ws/devel/lib/python2.7/dist-packages/create_fundamentals/srv/: _DiffDrive.py  _Leds.py  _PlaySong.py  _ResetEncoders.py  _StoreSong.py  __init__.py
catkin_ws/devel/share/common-lisp/ros/create_fundamentals/msg/: SensorPacket.lisp  _package.lisp  _package_SensorPacket.lisp  create_fundamentals-msg.asd
catkin_ws/devel/share/common-lisp/ros/create_fundamentals/srv/: DiffDrive.lisp  Leds.lisp  PlaySong.lisp  ResetEncoders.lisp  StoreSong.lisp  _package.lisp  _package_DiffDrive.lisp  _package_Leds.lisp  _package_PlaySong.lisp  _package_ResetEncoders.lisp  _package_StoreSong.lisp  create_fundamentals-srv.asd
catkin_ws/devel/share/create_fundamentals/cmake/: create_fundamentals-msg-extras.cmake  create_fundamentals-msg-paths.cmake  create_fundamentalsConfig.cmake
catkin_ws/devel/share/orange_fundamentals/cmake/: orange_fundamentals-msg-extras.cmake  orange_fundamentals-msg-paths.cmake  orange_fundamentalsConfig.cmake
catkin_ws/devel/share/robotics_fundamentals/cmake/: robotics_fundamentals-msg-paths.cmake  robotics_fundamentalsConfig.cmake
catkin_ws/src/create_fundamentals/: CMakeLists.txt
catkin_ws/src/create_fundamentals/msg/: SensorPacket.msg
catkin_ws/src/create_fundamentals/src/irobot/: create.py
docu/ha1/: 02text.txt  protocol.odt
docu/ha3/sources/: Bilder.bib
docu/ha3/tex/: Aufgabe1.tex  Aufgabe2.tex  Aufgabe3.tex  Aufgabenteilung.tex  BonusFrage.tex  Main.tex
docu/ha3_docu/: Makefile
docu/ha3_docu/sources/: Quellen.bib
docu/ha3_docu/tex/: Aufgabe1.tex  Aufgabe2.tex  Aufgabenteilung.tex  Einstellungen.tex  Main.tex
docu/ha4/tex/: Aufgabe1.tex  Aufgabe2.tex  Aufgabenteilung.tex  Einstellungen.tex  Main.tex
helpers/: mapTemplate.txt
helpers/gold/: gold.txt
helpers/launch/: planning.launch
helpers/maps/: map.txt  map22_06.txt
helpers/pickup/: pickup.txt
hooks/: pre-commit
robotics_fundamentals/: CMakeLists.txt  package.xml
robotics_fundamentals/src/: example_laser.py
src/: perf_square_with_encoders.cpp  print_info.cpp  tournament.cpp  wanderer.cpp
src/.ropeproject/: globalnames
src/create_fundamentals/: laser.launch  package.xml
src/create_fundamentals/src/: driver.py
src/create_fundamentals/srv/: PlaySong.srv
src/examples/: example_align.cpp  example_drive.cpp  example_driveWall.cpp  example_marker.cpp  example_maze.cpp  example_pathfinder.cpp  example_plan.cpp  example_playsong.cpp  example_ransac.cpp  example_rotate.cpp  example_rotateWithWall.cpp  example_tournament.cpp  example_turn.cpp  laser.cpp  ransac_tb.cpp
src/examples/ros/: example_laser.cpp  example_song.cpp  example_song.py
src/ha1/: 01wanderer.cpp  02perf_square.cpp  02perf_square_with_encoders.cpp  03align.cpp  _03ransac.cpp  a2.txt  protocol.odt
src/ha1/helpers/: 03ransac.cpp  constants.h
src/ha2/: 01moving_through_the_grid.cpp  02moving_fast_and_smooth.cpp
src/ha3/: 01GlobalLocalization.cpp  01global_localization.cpp  02tracking_position_and_orientation.cpp
src/ha4/: 01path_planning.cpp  02challenge-dry-run.cpp
src/lib/: Cell.cpp  basic_movements.cpp  callbacks.cpp  cell.cpp  constants.cpp  environment.cpp  map.cpp  maze.cpp  maze.h  path_finder.cpp  plan.cpp  play_song.cpp  position.cpp  ranges.h  ransac.cpp  wall.cpp  wall_recognition.cpp
src/map/: publish_map.py
src/map/.ropeproject/: globalnames
src/orange_fundamentals/src/: example_moving.py  example_song.py
src/tests/: env_tb.cpp  laser.cpp  ransac_tb.cpp
src/tournament/: challenge_smooth.cpp
srv/: DiffDrive.srv  ExecutePlan.srv  MoveToPosition.srv  StoreSong.srv
